--- a/djangodemo/djangodemo/mysite/templates/about.html
+++ b/djangodemo/djangodemo/mysite/templates/about.html
@@ -13,21 +13,13 @@
 </head>
 <body>
   <header>
-    <h1>About Us</h1>
-    <p>Learn more about us</p>
+    <h1>About Us Page</h1>
   </header>
 
   <main>
-    <section>
-      <h2>Our Story</h2>
-      <p>
-        We started with a simple mission: to provide high-quality solutions that make life easier.
-        Our team is passionate about technology and innovation.
-      </p>
-    </section>
 
     <section>
-      <h2>Watch Our Introduction Video</h2>
+      <h2>Video:</h2>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/XJpeGyfdzTQ?si=MaIRq4sluRBU09-a" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
   </main>
