--- a/djangodemo/djangodemo/mysite/templates/index.html
+++ b/djangodemo/djangodemo/mysite/templates/index.html
@@ -44,6 +44,7 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
     </style>
+    <script src="{% static 'js/script.js' %}"></script>
 </head>
 <body>
 <header>
